id / password login sample 추가

--- a/lib/cash_plan_web/templates/page/index.html.eex
+++ b/lib/cash_plan_web/templates/page/index.html.eex
@@ -9,5 +9,9 @@
       <i class="fa fa-facebook"></i>
       Sign in with Facebook
     </a>
+    <a class="btn btn-primary btn-lg" href="/auth/identity">
+      <i class="fa fa-user"></i>
+      Sign in with Username/Password
+    </a>
   <% end %>
 </div>
